# milk-chug-game

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/: audio.h  events.h  font.h  fonts.h  game.h  indicator.h  input.h  opponent.h  player.h  render.h  scene.h  stage.h  texture.h  ui.h  update.h  utils.h
resources/: info.plist  milk_chug.desktop
resources/macos/: milk_chug.icns
resources/windows/: setup.iss
src/: audio.c  events.c  font.c  fonts.c  game.c  indicator.c  input.c  main.c  opponent.c  player.c  render.c  scene.c  stage.c  texture.c  ui.c  update.c  utils.c
